apache2 (2.2.6-4) UNRELEASED; urgency=low

  * Convert docs to be directly viewable with a browser (and not use content
    negotiation).
  * Add doc-base entry for the documentation (closes: #311269)

 -- Stefan Fritsch <sf@debian.org>  Sat, 15 Dec 2007 00:16:20 +0100

apache2 (2.2.6-3) unstable; urgency=low

  * Allocate fewer bucket brigades in case of a flush bucket. This might help
    with the memory leaks reported in #399776 and #421557.
  * Escape the HTTP method in error messages to avoid potential cross site
    scripting vulnerabilities (CVE-2007-6203).
  * Update 053_bad_file_descriptor_PR42829.dpatch to avoid a race condition.
  * Redirect /doc/apache2-doc/manual/ to /manual/ in the apache2-doc config
    (Closes: #450867).
  * Add icons for .ogg and .ogm (Closes: #255443).
  * Add comment about how to log X-Forwarded-For (Closes: #425008).
  * Make mod_proxy_balancer not depend on mod_cache.
  * Add Homepage field to debian/control.
  * Add/fix some lintian overrides, fix some warnings.
  * Bump Standards-Version (no changes).

 -- Stefan Fritsch <sf@debian.org>  Fri, 07 Dec 2007 22:38:59 +0100

apache2 (2.2.6-2) unstable; urgency=low

  * Avoid calling apr_pollset_poll() and accept_func() when the listening
    sockets have already been closed on graceful stop or reload. This
    hopefully fixes processes not being killed (closes: #445263, #447164)
    and the "Bad file descriptor: apr_socket_accept: (client socket)"
    error message (closes: #400918, #443310)
  * Allow logresolve to process long lines (Closes: #331631)
  * Remove duplicate config examples (Closes: #294662)
  * Include README.backtrace describing how to create a backtrace
  * Add CVE reference to 2.2.6-1 changelog entry

 -- Stefan Fritsch <sf@debian.org>  Thu, 18 Oct 2007 19:35:40 +0200

apache2 (2.2.6-1) unstable; urgency=low

  * New upstream release
    - fixes mod_proxy DoS for threaded MPMs (CVE-2007-3847)