@@ -12,9 +12,6 @@ NameVirtualHost *
 		AllowOverride None
 		Order allow,deny
 		allow from all
-		# This directive allows us to have apache2's default start page
-                # in /apache2-default/, but still have / go to the right place
-                RedirectMatch ^/$ /apache2-default/
 	</Directory>
 
 	ScriptAlias /cgi-bin/ /usr/lib/cgi-bin/
